--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jss": "^9.3.3",
     "jss-loader": "^1.0.0",
     "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-jss": "^8.1.0",
     "react-redux": "^5.0.6",
     "react-responsive-carousel": "^3.1.30",
