--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-validator": "^4.3.0",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0"
   }
