--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,11 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-validator": "^4.3.0",
+    "jsonwebtoken": "^8.1.0",
+    "md5": "^2.2.1",
     "mongoose": "^4.13.6",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "node-robokassa": "0.0.0",
+    "password-hash-and-salt": "^0.1.4"
   }
 }
