--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
@@ -24,6 +25,7 @@
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
     "node-robokassa": "0.0.0",
-    "password-hash-and-salt": "^0.1.4"
+    "password-hash-and-salt": "^0.1.4",
+    "xml-js": "^1.6.1"
   }
 }
